fix the annoting overflow 2

--- a/style.css
+++ b/style.css
@@ -142,7 +142,5 @@ ul {
     .book .book-body.fixed {
       overflow-y: revert !important;
     }
-    .book .book-body .page-wrapper .page-inner {
-    padding: 20px 0 10px !important;
-   }
+
 }
